--- a/packages/ag-charts-website/src/components/pages-navigation/gridMenu.module.scss
+++ b/packages/ag-charts-website/src/components/pages-navigation/gridMenu.module.scss
@@ -57,7 +57,7 @@
         margin-right: var(--right-margin);
         padding-right: var(--menu-horizontal-margin);
         padding-left: var(--horizontal-margin);
-        border-right: solid 0.5px var(--secondary-border-color);
+        // border-right: solid 0.5px var(--secondary-border-color);
         @supports (position: sticky) {
             position: sticky;
             top: $top-bar-height;
